--- a/style.css
+++ b/style.css
@@ -41,10 +41,10 @@ body{
     background-color: hsl(0, 5%, 81%);
     width: 99%;
     height: 60px;
+    text-align: right;
     font-size: 2rem;
     padding: 20px;
-    border-radius: 5px;
-    text-align: left;   
+    border-radius: 5px;  
 }
 
 button{
@@ -52,7 +52,7 @@ button{
     font-size: 16px;
     background-color: hsl(46, 12%, 79%);
     box-shadow: 0 5px 5px 0 hsl(35, 11%, 61%);
-    padding: 20px 20px;
+    padding: 25px 10px;
     margin: 10px;
     border-radius: 8px;
 }
